--- a/Prueba.html
+++ b/Prueba.html
@@ -7,10 +7,10 @@
 <b>: Texto en negrita.
 <em>: Texto enfatizado (en cursiva).
 <u>: Texto subrayado.
-<s>: Texto tachado.
+<s>: Texto tachado.     
 <strike>: Texto tachado (obsoleto en HTML5).
 <del>: Texto marcado para eliminación (puede mostrarse tachado).
-<small>: Texto más pequeño. -->
+<small>: Texto más pequeño.te amo brenda -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -53,5 +53,7 @@
     <a href="https://youtube.com">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, labore. Est eum ducimus autem quisquam perferendis natus quam et dolore animi modi, necessitatibus voluptates voluptatem commodi omnis corrupti illo laboriosam?</a>
     <img src="" alt="Nombre por si esta roto">
     <footer>parte mas bajita    </footer>
+    <p>Hola en azul</p>
+    <aside>Hola valdibirria l               </aside>
 </body>
 </html>
