--- a/Prueba.html
+++ b/Prueba.html
@@ -10,7 +10,7 @@
 <s>: Texto tachado.     
 <strike>: Texto tachado (obsoleto en HTML5).
 <del>: Texto marcado para eliminación (puede mostrarse tachado).
-<small>: Texto más pequeño.te amo brenda -->
+<small>: Texto más pequeño  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -54,6 +54,7 @@
     <img src="" alt="Nombre por si esta roto">
     <footer>parte mas bajita    </footer>
     <p>Hola en azul</p>
-    <aside>Hola valdibirria l               </aside>
+    <aside>Hola valdibirria</aside>
+
 </body>
 </html>
