--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dhurjati&family=Kalnia:wght@200;300;400&display=swap" rel="stylesheet">    
     <title>Location-Wise</title>
 </head>
 
 <body>
     <nav>
-        <div class="Location_wise" id="Loc_wise">Location_Wise</div>
+        <div class="Location_wise" id="Loc_wise">Location Wise</div>
         <ul>
             <li>
                 <div class="Inicio" id="Inicio_1">Inicio</div>
@@ -31,15 +34,19 @@
         </ul>
     </nav>
     <div class="Contenido">
-        <div class="Titulo" >
-            Encuentra tu exito
-        </div>
-        <div class="Descripcion" >
-            ¿Qué es Location_Wise?
-            <span class="Des_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore iste consectetur tempora ut esse voluptatem, repudiandae quae laudantium, cumque numquam ipsum dolore omnis? Maxime quasi illum quam libero pariatur maiores?</span>
+        <div class="Frase" >
+            ¡¡Descubre tu lugar indicado!!
+            <div class="Titulo">
+                ¿Qué es Location Wise?
+                <div class="Contenido.txt">
+                    Location-Wise es una solución geográfica que te ayuda a localizar tu negocio mediante el uso de mapas y datos geoestadísticos
+                </div>
+            </div>
         </div>
     </div>
     
 </body>
+
+
 
 </html>
