--- a/javascript.html
+++ b/javascript.html
@@ -85,6 +85,17 @@
        console.log(a+d);
        //se ocupara lo que es un casting (un cambio )
        console.log(a +parseInt(d));
+
+       //Hay tipos de dato como el boolean que  los caracteres tienden a T OR F
+       
+      //diferencia entre una variable indefinida y una null , una no se pone y la otra es intencional 
+      let finlandia;
+      let Noruega =null;
+      console.log(finlandia);
+      console.log(Noruega);
+      //not at number
+      let noEsUnNumero ="omar"*3.14;
+      console.log(noEsUnNumero);
     </script>
 </body>
 </html>
