Actualizar javascript.html

--- a/javascript.html
+++ b/javascript.html
@@ -96,6 +96,6 @@
       //not at number
       let noEsUnNumero ="omar"*3.14;
       console.log(noEsUnNumero);
-    </script>
+    </script>JIJIJIJI
 </body>
 </html>
